@@ -180,3 +180,4 @@ v 2.0:
 	- Update all code formatting to use tabs for indentation.
 	- Stop using our own deprecated methods as we tell others to do.
 	- Finally remove all deprecated methods.
+	- Re-initialize the WorldsHolder on a reload, as un-registering and re-registering a new holder means all plugins have to check for the new service on every quiery.
